Linkeados el index.html con las otras secciones

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                Ver más
+                                <a href="register.html" class="align_all_items_center" style="height: 100%; width: 100%;">
+                                    Ver más
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -105,7 +107,9 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                Ver más
+                                <a href="register.html" class="align_all_items_center" style="height: 100%; width: 100%;">
+                                    Ver más
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -119,7 +123,9 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                Ver más
+                                <a href="register.html" class="align_all_items_center" style="height: 100%; width: 100%;">
+                                    Ver más
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -133,7 +139,9 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                Ver más
+                                <a href="register.html" class="align_all_items_center" style="height: 100%; width: 100%;">
+                                    Ver más
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -147,7 +155,9 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                Ver más
+                                <a href="register.html" class="align_all_items_center" style="height: 100%; width: 100%;">
+                                    Ver más
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -161,7 +171,9 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                Ver más
+                                <a href="register.html" class="align_all_items_center" style="height: 100%; width: 100%;">
+                                    Ver más
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -184,8 +196,9 @@
                     </label>
                     <label class="align_all_items_center" style="width: 100%; margin-top: 20px;">
                         <label id="log_button" class="box_shadow_background">
-                            <input type="submit"
-                                   value="Iniciar Sesión">
+                            <a href="main-registered.html" class="align_all_items_center">
+                                Iniciar sesión
+                            </a>
                         </label>
                         <label class="align_all_items_center" id="register_button">
                             <a href="/register.html" class="box_shadow_background submit_user align_all_items_center">
