--- a/index.html
+++ b/index.html
@@ -238,13 +238,16 @@
     </section>
 
 
-
     <footer class="align_all_items_center">
         <div id="left_footer">
             <p>© 2025 mochileros sin fronteras</p>
         </div>
         <div id="center_footer" class="align_all_items_center">
-            <p>Sobre nosotros. Política de Privacidad. Ayuda</p>
+            <div id="footer_shortcuts" class="align_all_items_center">
+                <p>Sobre nosotros</p>
+                <p>Política de Privacidad</p>
+                <p>Ayuda</p>
+            </div>
             <form class="align_all_items_center" id="newsletter_form">
                 <label><input type="email" placeholder="Email"
                               class="box_shadow_background"></label>
@@ -252,7 +255,7 @@
                               class="box_shadow_background"></label>
             </form>
         </div>
-        <div class="align_all_items_center" style="margin-left: auto; margin-right: 10px;"> 
+        <div class="align_all_items_center" id="social_media">
             <a href="https://www.instagram.com/p/DOodaoADW28/" target="_blank">
                 <img src="/images/icons/instagram.png"
                 alt="Logo de Instagram"
