--- a/register.html
+++ b/register.html
@@ -14,23 +14,23 @@
 </head>
 
 <body>
-    <header class="align_all_items_center" style="border-radius: 10px;">
-        <div id="site_title">Mochileros sin fronteras</div>
-        <div id="site_shortcuts">
-            <div>Inicio</div>
-            <div>Experiencias</div>
-            <div>Consejos</div>
-            <div>Foro</div>
-            <div>Contacto</div>
+    <header class="align_all_items_center">
+    <div id="site_title"><b>Mochileros sin fronteras</b></div>
+    <div id="site_shortcuts">
+        <div>Inicio</div>
+        <div>Experiencias</div>
+        <div>Consejos</div>
+        <div>Foro</div>
+        <div>Contacto</div>
+    </div>
+    <div id="logo" class="align_all_items_center">
+        <img src="images/Dud.webp" alt="logo" style="width: 60px;">
+        <div id="language_selector" class="align_all_items_center box_shadow_background">
+            <div>ES</div>
+            <span class="material-icons">arrow_drop_down</span>
         </div>
-        <div class="align_all_items_center" style="margin-left: auto">
-            <img src="images/Dud.webp" alt="logo" style="width: 60px;">
-            <div id="language_selector" class="align_all_items_center box_shadow_background">
-                <div>ES</div>
-                <span class="material-icons">arrow_drop_down</span>
-            </div>
-        </div>
-    </header>
+    </div>
+</header>
 
     <article id="main" class="align_all_items_center">
         <h1>Registro de nuevos usuarios</h1>
@@ -47,29 +47,28 @@
             <label class="align_all_items_center">
                 <input type="text" placeholder="Confirmar Correo" class="box_shadow_background data_box">
             </label>
-        </form>
-
-        <section id="birthday">
-            <h4 style="margin-left: 20px; margin-bottom: 10px;">Fecha de nacimiento</h4>
-            <label>
-                <input type="date" style="margin-left: 50px; margin-top: 5px; height: 40px; width: 25%;">
+            <label class="align_all_items_center" id="campo_nacimiento">
+                <label>Fecha de nacimiento</label>
+                <label id="fecha_nacimiento" class="align_all_items_center">
+                    <input type="date">
+                </label>
             </label>
-        </section>
+        </form>
 
         <hr>
 
         <form id="login">
-            <label class="align_all_items_center" style="margin-left: 40px; margin-right: 20px; width: 40%;">
+            <label class="align_all_items_center" style="margin: 0 auto">
                 <input type="text" placeholder="Login" class="box_shadow_background login_box">
             </label>
-            <label class="align_all_items_center" style= "width: 40%;">
-                <input type="text" placeholder="Contraseña" class="box_shadow_background login_box" style="margin-left: 40px">
+            <label class="align_all_items_center" style="margin: 0 auto">
+                <input type="text" placeholder="Contraseña" class="box_shadow_background login_box">
             </label>
         </form>
 
         <section id="upload_image">
-            <h4 style="margin-left: 20px; margin-bottom: 10px; margin-top: 5px;">Subir imagen de perfil</h4>
-            <input type="file" style="margin-left: 20px;">
+            <h4 style="margin-left: 20px; margin-bottom: 10px; margin-top: 5px">Subir imagen de perfil</h4>
+            <input type="file" style="margin-left: 20px; max-width: 80%">
         </section>
 
 
@@ -77,12 +76,12 @@
         <section id="checkbox">
             <label style="height: 40px; width: 100%; display:flex; align-items: center;">
                 <input type="checkbox" style="height: 30px; width: 30px; margin-left: 20px;"> 
-                <p style="margin-left: 10px;">
+                <label style="margin-left: 10px; max-width: 80%">
                     Acepto la 
                     <a href="https://policies.google.com/privacy?hl=es" 
                     target="_blank"> Política de Privacidad
                     </a>
-                </p>
+                </label>
             </label>
         </section>
 
@@ -96,29 +95,38 @@
     </article>
 
 
-    
     <footer class="align_all_items_center">
         <div id="left_footer">
             <p>© 2025 mochileros sin fronteras</p>
         </div>
         <div id="center_footer" class="align_all_items_center">
-            <p>Sobre nosotros. Política de Privacidad. Ayuda</p>
+            <div id="footer_shortcuts" class="align_all_items_center">
+                <p>Sobre nosotros</p>
+                <p>Política de Privacidad</p>
+                <p>Ayuda</p>
+            </div>
+            <form class="align_all_items_center" id="newsletter_form">
+                <label><input type="email" placeholder="Email"
+                              class="box_shadow_background"></label>
+                <label style="margin: 0 20px"><input type="submit" value="Subscribete a nuestras newsletter"
+                                                     class="box_shadow_background"></label>
+            </form>
         </div>
-        <div class="align_all_items_center" style="margin-left: auto; margin-right: 10px;"> 
-            <a href="https://www.instagram.com/" target="_blank">
+        <div class="align_all_items_center" id="social_media">
+            <a href="https://www.instagram.com/p/DOodaoADW28/" target="_blank">
                 <img src="/images/icons/instagram.png"
-                alt="Logo de Instagram"
-                style="height: 55px; margin: 10px">
+                     alt="Logo de Instagram"
+                     style="height: 55px; margin: 10px">
             </a>
             <a href="https://www.tiktok.com/explore" target="_blank">
                 <img src="/images/icons/tiktok.png"
-                alt="Logo de TikTok"
-                style="height: 55px; margin: 10px">
+                     alt="Logo de TikTok"
+                     style="height: 55px; margin: 10px">
             </a>
             <a href="https://youtu.be/fHPysRp8FWg?si=qZZO_LRgjP2ic3f_" target="_blank">
                 <img src="/images/icons/youtube.png"
-                alt="Logo de Youtube"
-                style="height: 60px; margin: 10px">
+                     alt="Logo de Youtube"
+                     style="height: 60px; margin: 10px">
             </a>
         </div>
     </footer>
