--- a/main-registered.html
+++ b/main-registered.html
@@ -16,22 +16,22 @@
 <body>
 
     <header class="align_all_items_center">
-        <div id="site_title"><b>Mochileros sin fronteras</b></div>
-        <div id="site_shortcuts">
-            <div>Inicio</div>
-            <div>Experiencias</div>
-            <div>Consejos</div>
-            <div>Foro</div>
-            <div>Contacto</div>
+    <div id="site_title"><b>Mochileros sin fronteras</b></div>
+    <div id="site_shortcuts">
+        <div>Inicio</div>
+        <div>Experiencias</div>
+        <div>Consejos</div>
+        <div>Foro</div>
+        <div>Contacto</div>
+    </div>
+    <div id="logo" class="align_all_items_center">
+        <img src="images/Dud.webp" alt="logo" style="width: 60px;">
+        <div id="language_selector" class="align_all_items_center box_shadow_background">
+            <div>ES</div>
+            <span class="material-icons">arrow_drop_down</span>
         </div>
-        <div id="logo" class="align_all_items_center">
-            <img src="images/Dud.webp" alt="logo" style="width: 60px;">
-            <div id="language_selector" class="align_all_items_center box_shadow_background">
-                <div>ES</div>
-                <span class="material-icons">arrow_drop_down</span>
-            </div>
-        </div>
-    </header>
+    </div>
+</header>
 
     <section id="main">
         <div id="main_content" class="align_all_items_center">
@@ -169,8 +169,8 @@
             </article>
         </div>
 
-        <aside id="aside_section" style="border: 3px solid black; border-radius: 10px; margin: 10px;">
-            <h2 style="margin-left: 40px;">Nombre de usuario</h2>
+        <aside id="aside_section" class="simple_box_border">
+            <h2>Nombre de usuario</h2>
             <div id="user_data" class="align_all_items_center">
                 <div id="user_photo" class="align_all_items_center">
                     <img src="/images/tylerthecreator.webp" alt="Foto de perfil" style="height: 100px; width: 100px; border-radius: 10px;">
@@ -258,23 +258,33 @@
             <p>© 2025 mochileros sin fronteras</p>
         </div>
         <div id="center_footer" class="align_all_items_center">
-            <p>Sobre nosotros. Política de Privacidad. Ayuda</p>
+            <div id="footer_shortcuts" class="align_all_items_center">
+                <p>Sobre nosotros</p>
+                <p>Política de Privacidad</p>
+                <p>Ayuda</p>
+            </div>
+            <form class="align_all_items_center" id="newsletter_form">
+                <label><input type="email" placeholder="Email"
+                              class="box_shadow_background"></label>
+                <label style="margin: 0 20px"><input type="submit" value="Subscribete a nuestras newsletter"
+                                                     class="box_shadow_background"></label>
+            </form>
         </div>
-        <div class="align_all_items_center" style="margin-left: auto; margin-right: 10px;"> 
+        <div class="align_all_items_center" id="social_media">
             <a href="https://www.instagram.com/p/DOodaoADW28/" target="_blank">
                 <img src="/images/icons/instagram.png"
-                alt="Logo de Instagram"
-                style="height: 55px; margin: 10px">
+                     alt="Logo de Instagram"
+                     style="height: 55px; margin: 10px">
             </a>
             <a href="https://www.tiktok.com/explore" target="_blank">
                 <img src="/images/icons/tiktok.png"
-                alt="Logo de TikTok"
-                style="height: 55px; margin: 10px">
+                     alt="Logo de TikTok"
+                     style="height: 55px; margin: 10px">
             </a>
             <a href="https://youtu.be/fHPysRp8FWg?si=qZZO_LRgjP2ic3f_" target="_blank">
                 <img src="/images/icons/youtube.png"
-                alt="Logo de Youtube"
-                style="height: 60px; margin: 10px">
+                     alt="Logo de Youtube"
+                     style="height: 60px; margin: 10px">
             </a>
         </div>
     </footer>
