more bullshit fixed

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <form class="align_all_items_center" id="newsletter_form">
                 <label><input type="email" placeholder="Email"
                               class="box_shadow_background"></label>
-                <label style="margin: 0 20px"><input type="submit" value="Subscribete a nuestras newsletter"
+                <label style="margin: 0 20px"><input type="submit" value="Subscribete a la newsletter"
                               class="box_shadow_background"></label>
             </form>
         </div>
@@ -259,17 +259,17 @@
             <a href="https://www.instagram.com/p/DOodaoADW28/" target="_blank">
                 <img src="/images/icons/instagram.png"
                 alt="Logo de Instagram"
-                style="height: 55px; margin: 10px">
+                style="height: 50px; margin: 10px">
             </a>
             <a href="https://www.tiktok.com/explore" target="_blank">
                 <img src="/images/icons/tiktok.png"
                 alt="Logo de TikTok"
-                style="height: 55px; margin: 10px">
+                style="height: 50px; margin: 10px">
             </a>
             <a href="https://youtu.be/fHPysRp8FWg?si=qZZO_LRgjP2ic3f_" target="_blank">
                 <img src="/images/icons/youtube.png"
                 alt="Logo de Youtube"
-                style="height: 60px; margin: 10px">
+                style="height: 55px; margin: 10px">
             </a>
         </div>
     </footer>
