--- a/main-registered.html
+++ b/main-registered.html
@@ -173,7 +173,7 @@
             <h2>Nombre de usuario</h2>
             <div id="user_data" class="align_all_items_center">
                 <div id="user_photo" class="align_all_items_center">
-                    <img src="/images/tylerthecreator.webp" alt="Foto de perfil" style="height: 100px; width: 100px; border-radius: 10px;">
+                    <img src="/images/tylerthecreator.webp" alt="Foto de perfil">
                 </div>
                 <div id="log_out_box" class="align_all_items_center box_shadow_background">
                     Cerrar Sesión
@@ -232,13 +232,13 @@
 
             <h3 style="padding-left: 30px; margin-bottom: 10px;">¿Tienes algún consejo?</h3>
             
-            <form>
+            <form class="align_all_items_center" style="flex-direction: column">
                 <label id="advice_title" class="input_section">
-                    <input type="search" placeholder="Título del consejo" id="advice_box" class="input_field">
+                    <input type="search" placeholder="Título" id="advice_box" class="input_field">
                 </label>
                 <label id="advice_section">
                     <label id="advice_field" class="input_section">
-                        <input type="search" placeholder="Escribe aqui tu consejo" id="content_box" class="input_field">
+                        <input type="search" placeholder="Mensaje" id="content_box" class="input_field">
                     </label>
                     <label class="align_all_items_center box_shadow_background" id="send_button">
                         <b>Enviar</b>
@@ -266,7 +266,7 @@
             <form class="align_all_items_center" id="newsletter_form">
                 <label><input type="email" placeholder="Email"
                               class="box_shadow_background"></label>
-                <label style="margin: 0 20px"><input type="submit" value="Subscribete a nuestras newsletter"
+                <label style="margin: 0 20px"><input type="submit" value="Subscribete a la newsletter"
                                                      class="box_shadow_background"></label>
             </form>
         </div>
