--- a/register.html
+++ b/register.html
@@ -108,7 +108,7 @@
             <form class="align_all_items_center" id="newsletter_form">
                 <label><input type="email" placeholder="Email"
                               class="box_shadow_background"></label>
-                <label style="margin: 0 20px"><input type="submit" value="Subscribete a nuestras newsletter"
+                <label style="margin: 0 20px"><input type="submit" value="Subscribete a la newsletter"
                                                      class="box_shadow_background"></label>
             </form>
         </div>
