denis te voy a tocar

--- a/main-registered.html
+++ b/main-registered.html
@@ -175,9 +175,9 @@
                 <div id="user_photo" class="align_all_items_center">
                     <img src="/images/tylerthecreator.webp" alt="Foto de perfil">
                 </div>
-                <div id="log_out_box" class="align_all_items_center box_shadow_background">
+                <a id="log_out_box" class="align_all_items_center box_shadow_background" href="index.html">
                     Cerrar Sesión
-                </div>
+                </a>
             </div>
 
             <hr>
