Añadidos los links

--- a/index.html
+++ b/index.html
@@ -18,11 +18,35 @@
     <header class="align_all_items_center">
         <div id="site_title"><b>Mochileros sin fronteras</b></div>
         <div id="site_shortcuts">
-            <div>Inicio</div>
-            <div>Experiencias</div>
-            <div>Consejos</div>
-            <div>Foro</div>
-            <div>Contacto</div>
+            <div>
+                <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                    Inicio
+                </a>
+            </div>
+
+            <div>
+                <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                    Experiencias
+                </a>
+            </div>
+
+            <div>
+                <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                    Consejos
+                </a>
+            </div>
+
+            <div>
+                <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                    Foro
+                </a>
+            </div>
+
+            <div>
+                <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                    Contacto
+                </a>
+            </div>
         </div>
         <div id="logo" class="align_all_items_center">
             <img src="images/Dud.webp" alt="logo" style="width: 60px;">
@@ -214,23 +238,23 @@
             <div id="top_recommended" class="align_all_items_center">
                 <div class="recommended_titles"><b>Top destinos mochileros</b></div>
                 <div>
-                    <a>Tailandia</a>
-                    <a>Bolivia</a>
-                    <a>Nepal</a>
+                    <a href="https://youtu.be/MTe12fH2xtQ?si=MjitCdzTn90-_jSU" target="_blank">Tailandia</a>
+                    <a href="https://youtu.be/_PjVrkxyKPg?si=6ddcRk-foOiYmsMs" target="_blank">Bolivia</a>
+                    <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank">Nepal</a>
                 </div>
 
                 <div class="recommended_titles"><b>Consejos rápidos</b></div>
                 <div>
-                    <a>Lleva seguro médico</a>
-                    <a>Infórmate sobre visados</a>
-                    <a>Viaja ligero</a>
+                    <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank">Lleva seguro médico</a>
+                    <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank">Infórmate sobre visados</a>
+                    <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank">Viaja ligero</a>
                 </div>
 
                 <div class="recommended_titles"><b>Próximos encuentros</b></div>
                 <div>
-                    <a>Madrid · 12/10</a>
-                    <a>Barcelona · 25/10</a>
-                    <a>Valencia · 08/11</a>
+                    <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank">Madrid · 12/10</a>
+                    <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank">Barcelona · 25/10</a>
+                    <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank">Valencia · 08/11</a>
                 </div>
                 <img src="images/tenna.gif" alt="logo" style="width: 120px;margin-top: 100px">
             </div>
@@ -244,9 +268,9 @@
         </div>
         <div id="center_footer" class="align_all_items_center">
             <div id="footer_shortcuts" class="align_all_items_center">
-                <p>Sobre nosotros</p>
-                <p>Política de Privacidad</p>
-                <p>Ayuda</p>
+                <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank" style="margin: 10px;">Sobre nosotros</a>
+                <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank" style="margin: 10px;">Política de Privacidad</a>
+                <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank" style="margin: 10px;">Ayuda</a>
             </div>
             <form class="align_all_items_center" id="newsletter_form">
                 <label><input type="email" placeholder="Email"
