--- a/buy.html
+++ b/buy.html
@@ -18,11 +18,35 @@
     <header class="align_all_items_center">
     <div id="site_title"><b>Mochileros sin fronteras</b></div>
     <div id="site_shortcuts">
-        <div>Inicio</div>
-        <div>Experiencias</div>
-        <div>Consejos</div>
-        <div>Foro</div>
-        <div>Contacto</div>
+        <div>
+            <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                Inicio
+            </a>
+        </div>
+
+        <div>
+            <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                Experiencias
+            </a>
+        </div>
+
+        <div>
+            <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                Consejos
+            </a>
+        </div>
+
+        <div>
+            <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                Foro
+            </a>
+        </div>
+
+        <div>
+            <a href="https://www.google.com/?zx=1759420117151&no_sw_cr=1" target="_blank">
+                Contacto
+            </a>
+        </div>
     </div>
     <div id="logo" class="align_all_items_center">
         <img src="images/Dud.webp" alt="logo" style="width: 60px;">
@@ -133,16 +157,10 @@
         </div>
         <div id="center_footer" class="align_all_items_center">
             <div id="footer_shortcuts" class="align_all_items_center">
-                <p>Sobre nosotros</p>
-                <p>Política de Privacidad</p>
-                <p>Ayuda</p>
+                <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank" style="margin: 10px;">Sobre nosotros</a>
+                <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank" style="margin: 10px;">Política de Privacidad</a>
+                <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank" style="margin: 10px;">Ayuda</a>
             </div>
-            <form class="align_all_items_center" id="newsletter_form">
-                <label><input type="email" placeholder="Email"
-                              class="box_shadow_background"></label>
-                <label style="margin: 0 20px"><input type="submit" value="Subscribete a la newsletter"
-                                                     class="box_shadow_background"></label>
-            </form>
         </div>
         <div class="align_all_items_center" id="social_media">
             <a href="https://www.instagram.com/p/DOodaoADW28/" target="_blank">
