--- a/buy.html
+++ b/buy.html
@@ -161,6 +161,13 @@
                 <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank" style="margin: 10px;">Política de Privacidad</a>
                 <a href="https://www.google.com/?zx=1759420747574&no_sw_cr=1" target="_blank" style="margin: 10px;">Ayuda</a>
             </div>
+            
+            <form class="align_all_items_center" id="newsletter_form">
+                <label><input type="email" placeholder="Email"
+                              class="box_shadow_background"></label>
+                <label style="margin: 0 20px"><input type="submit" value="Subscribete a la newsletter"
+                              class="box_shadow_background"></label>
+            </form>
         </div>
         <div class="align_all_items_center" id="social_media">
             <a href="https://www.instagram.com/p/DOodaoADW28/" target="_blank">
