--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </article>
         </div>
 
-        <aside id="aside_section" class="align_all_items_center">
+        <aside id="aside_section" class="align_all_items_center simple_box_border">
             <div id="log_field" class="align_all_items_center">
                 <form>
                     <label class="align_all_items_center input_field" style="width: 100%">
