--- a/register.html
+++ b/register.html
@@ -112,7 +112,7 @@
 
         <section id="save_box">
             <label id="confirm" class="align_all_items_center box_shadow_background">
-                <a href="/main-registered.html" style="width: 100%; height: 100%;" class="align_all_items_center" id="font_box">
+                <a href="/main-registered.html" style="width: 100%; height: 100%;" class="align_all_items_center">
                     Guardar datos y acceder
                 </a>
             </label>
